vibecoding/k8s/app-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: insurance-app-service
  namespace: insurance-application
  labels:
    app: insurance-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    nodePort: 30000
  selector:
    app: insurance-app
